--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,17 @@
 body {
-  background-color: #F2CAC8;
-  font-family: 'Titillium Web', sans-serif;
+  background-color: #f2ecce;
+  font-family: "Titillium Web", sans-serif;
   color: gray;
   margin-left: auto;
   margin-right: auto;
   min-width: 50%;
 }
 
-
 .boardTable {
   padding: 10px;
   -webkit-border-radius: 20px 20px 20px 20px;
   border-radius: 20px 20px 20px 20px;
-  background-color: #F6F6F6;
+  background-color: #f6f6f6;
   width: 70%;
   height: 80%;
   text-align: center;
@@ -21,8 +20,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   /* height:; */
-  table-layout:fixed;
-
+  table-layout: fixed;
 }
 
 .cell {
@@ -34,27 +32,24 @@ body {
   background-image: url(../imgs/bomb.png);
 }
 
-
 .marked {
-  background-color: #F1485B
+  background-color: #f1485b;
 }
 
 h1 {
   margin-top: -12px;
   color: white;
   text-align: center;
-  background-color: #C36B85;
-
+  background-color: #224026;
 }
 
 .hintIndication {
-  background-color:#B3E8AC;
+  background-color: #b3e8ac;
 }
 
 .smiley {
   display: inline-block;
   width: 50px;
-  margin-right: 15%;
 }
 
 .header {
@@ -68,16 +63,15 @@ h1 {
 }
 
 .l1 {
-  width: 40%
+  width: 40%;
 }
 
 .l2 {
-
-  width: 60%
+  width: 60%;
 }
 
 .l3 {
-  width: 80%
+  width: 80%;
 }
 
 .levelBTN:focus {
@@ -86,49 +80,46 @@ h1 {
 }
 
 .hintsBTN {
+  display: inline-block;
   margin-top: 10px;
   background-color: transparent;
-
 }
 
-.h1 {
-  width: 50px;
+.hintsBTN img {
+  width: 30px;
+  cursor: pointer;
 }
 
-.h2 {
-  width: 50px;
-}
-
-.h3 {
-  width: 50px;
+.levelBTN:focus {
+  background-color: transparent;
 }
 
 .feedBackTxt {
-  color: gray
+  color: gray;
 }
 
 .timer {
-  margin-top:-15px;
+  margin-top: -15px;
   font-size: 30px;
   background-color: whitesmoke;
 }
 
 .life {
-  margin-right: 18%;
+  /* margin-right: 18%; */
 }
 
 .cell {
-height:30px;
+  height: 30px;
 }
 
-.hidden{
-  opacity:0;
+.hidden {
+  opacity: 0;
 }
 
-.feedBackTxt{
-margin-top:-20px;
+.feedBackTxt {
+  margin-top: -20px;
 }
 
-.pickedSize{
+.pickedSize {
   background-color: whitesmoke;
 }
